# sonotxt

./: .gitmodules  GPU_REQUIREMENTS.md  VIBEVOICE_DEPLOYMENT.md  docker-compose.yml
.github/workflows/: deploy.yml
app/: .env.example  .env.production  .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  uno.config.ts  vite.config.ts
app/.papi/: polkadot-api.json
app/.papi/descriptors/: package.json
app/public/: embed.js
app/scripts/: download-live2d-models.sh
app/src/: App.tsx  index.css  index.tsx
app/src/components/: AuthModal.tsx  Avatar.tsx  CallPage.tsx  DocsPage.tsx  ErrorBoundary.tsx  PasskeyAuth.tsx  PinLock.tsx  Player.tsx  PoolExplorer.tsx  ProfileDropdown.tsx  ProfilePage.tsx  TextTerminal.tsx  Toast.tsx  VoiceSelector.tsx  VoiceTerminal.tsx  WalletModal.tsx  ZidModal.tsx
app/src/lib/: api.ts  assetConversion.ts  audioDB.ts  audioEncode.ts  contract.ts  evm.ts  i18n.ts  jobStatus.ts  noise.ts  people.ts  scrollFade.ts  store.tsx  teeClient.ts  vaultClient.ts  wallet.ts  webauthnPrf.ts  zid-auth.ts
contracts/: AssetSwap.sol  SonoGovernance.sol  SonoMarket.sol  SonoProxy.sol  SonoToken.sol  TokenFactory.sol  deploy-mainnet.ts  deploy-v4.ts  deploy.ts  fuzz-v3.ts  interact.ts  package.json  pnpm-lock.yaml  transfer_ownership.ts  upgrade-v3.ts  upgrade.ts
contracts/asset-swap/: Cargo.toml  contract.polkavm
contracts/asset-swap/.cargo/: config.toml
contracts/asset-swap/src/: main.rs
docs/: E2E-AUDIO-ENCRYPTION.md  pallet-bridge.md
docs/bridge/: index.html
example/: demo.html  embed.js  index.html
extension/: background.js  content.css  content.js  manifest.json  popup.html  popup.js
kokoro-client/: Cargo.toml
kokoro-client/examples/: test_e2e.rs  test_stream.rs
kokoro-client/src/: lib.rs  noise.rs
kokoro-common/: Cargo.toml
kokoro-common/src/: lib.rs
kokoro-tee/: Cargo.toml
kokoro-tee/src/: attestation.rs  inference.rs  main.rs  noise.rs  quic.rs  websocket.rs
landing/: index.html
proposals/: gpu-infrastructure.md  pallet-bridge-tip.md
scripts/: gen-embed-sig.sh  haproxy-sonotxt.cfg  setup-domain.sh
secrets/: .gitignore  README  mainnet-service-key.age  testnet-service-key.age  vast-api-key.age
vibevoice-service/: Dockerfile  README.md  SETUP.md  docker-compose.yml  requirements.txt  server.py
worker/: benchmark.py  deploy.sh  llm_server.py  server.py  setup.sh
