[package]
name = "kokoro-client"
version = "0.1.0"
edition = "2021"
description = "client library for kokoro private TTS inference"

[dependencies]
# shared protocol types
kokoro-common = { path = "../kokoro-common" }

# QUIC transport
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# async runtime
tokio = { version = "1", features = ["full"] }

# Noise protocol for key exchange
snow = "0.9"

# crypto
rand = "0.8"
sha2 = "0.10"

# logging
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
