[package]
name = "kokoro-tee"
version = "0.1.0"
edition = "2021"
description = "TEE-isolated kokoro TTS inference with Noise protocol encryption"

[[bin]]
name = "kokoro-tee"
path = "src/main.rs"

[dependencies]
# shared protocol types
kokoro-common = { path = "../kokoro-common" }

# TTS inference
kokoro-tts = "0.3"

# QUIC transport
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.13"

# Noise protocol for key exchange
snow = "0.9"

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# crypto
rand = "0.8"
sha2 = "0.10"

# audio encoding
audiopus = "0.3.0-rc.0"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# WebSocket support for browser clients
tokio-tungstenite = "0.26"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }

# SEV-SNP attestation (uses sev crate for guest device access)
sev = { version = "7", default-features = false, features = ["snp"], optional = true }

[features]
default = ["insecure"]
# real TEE attestation (requires AMD SEV-SNP hardware)
sev-snp = ["dep:sev"]
# real TEE attestation (requires Intel TDX hardware)
tdx = []
# development mode - no real attestation
insecure = []
